@@ -1,5 +1,6 @@
 AC_PREREQ(2.61)
 AC_INIT([uriparser], [0.7.2])
+AC_CONFIG_AUX_DIR([build-aux])
 AM_INIT_AUTOMAKE([1.10.1 foreign dist-zip dist-bzip2 dist-lzma subdir-objects])
 AM_CONFIG_HEADER(test/CppTest/config.h)
 
